# tokyo-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  LICENSE-ZLIB  README.md  rustfmt.toml
client/: Cargo.toml  README.md  rustfmt.toml
client/data/: engine.txt
client/examples/: chaser.rs  jakebot.rs  peace.rs  peaceful.rs  simple.rs
client/examples/complex/: Cargo.toml
client/examples/complex/src/: condition.rs  main.rs  strategy.rs
client/src/: analyzer.rs  behavior.rs  geom.rs  lib.rs  models.rs  radar.rs  ship.rs  strategy.rs  util.rs
client/src/analyzer/: bullet.rs  player.rs
client/src/strategy/: behavior.rs  condition.rs  target.rs
common/: Cargo.toml
common/src/: lib.rs  models.rs  vec.rs
server/: .env  Cargo.toml
server/frontend/resources/public/: index.html
server/src/: game.rs  main.rs
server/src/actors/: api_actor.rs  client_ws_actor.rs  game_actor.rs  mod.rs
server/src/controllers/: api.rs  common.rs  mod.rs
server/src/models/: commands.rs  messages.rs  mod.rs
spectator/: index.html
tools/: Cargo.toml
