[package]
name = "tokyo"
description = "tokyo-rs meetup library"
documentation = "https://docs.rs/tokyo"
repository = "https://github.com/rust-tokyo/tokyo-rs"
version = "0.1.0"
authors = ["Jake McGinty <me@jake.su>"]
edition = "2018"
license = "Unlicense"
categories = []
readme = "README.md"

[[bin]]
name = "examples-simple"
path = "examples/simple.rs"

[[bin]]
name = "examples-chaser"
path = "examples/chaser.rs"

[dependencies]
common = { path = "../common" }
failure = "0.1"
futures = "0.1"
log = "0.4"
url = "1.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
text_io = "0.1.7"
tokio = "0.1"
tokio-tungstenite = "0.6"

[dev-dependencies]
rand = "0.6"
