[package]
name = "meetup-server"
version = "0.1.0"
authors = ["Brian Schwind <brianmschwind@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = {version = "0.7", features = ["ssl"]}
dotenv = "0.13.0"
env_logger = "0.6"
envy = "0.3"
lazy_static = "1.2.0"
log = "0.4.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
listenfd = "0.3"
failure = "0.1.3"
futures = "0.1"
url = "1.7.2"
